[package]
name = "queryscheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.45.0"
bisection = "0.1.0"
chrono = "0.4.42"
dspy-rs = "0.7.3"
good_lp = "1.14.2"
k8s-openapi = "0.26.1"
kube = "2.0.1"
nats = "0.25.0"
neo4rs = "0.8.0"
petgraph = "0.8.3"
ractor = "0.15.10"
serde = "1.0.228"
strum = "0.27.2"
strum_macros = "0.27.2"
surrealdb = "2.4.0"
tokio = "1.48.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
